# vanilla-rtb

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VERSIONS.md  main.cpp
CRUD/: .travis.yml  CMakeLists.txt  README.md  main.cpp
CRUD/examples/: CMakeLists.txt  index.html  simple_restful_service.cpp
CRUD/handlers/: crud_dispatcher.hpp
CRUD/service/: CMakeLists.txt  connection.hpp  connection_manager.hpp  data_read_result.hpp  header.hpp  mime_types.cpp  mime_types.hpp  persistent_connection.hpp  reply.cpp  reply.hpp  request_parser.cpp  server.hpp  spin_lock.hpp
benchmarks/: CMakeLists.txt  README.md  audit_benchmarks.cpp  audit_buffer.hpp  audit_codec.hpp  main.cpp  rtb_cache_benchmarks.cpp  rtb_dsl_benchmarks.cpp
examples/: BID_REQUEST_BANNER.json  CMakeLists.txt  README.md  REQUEST__SHORT_NOROOT_STRING.json  ab.sh  bidder_test.cpp  country_cache_test.cpp  curl.sh  exchange_handler_test.cpp  messaging_client_test.cpp  mock_bidder_test.cpp  persisted_regex_restful_service.cpp  regex_restful_service.cpp  webserver.cpp
examples/UI/CampaignBudgetsCDN/: index.html
examples/UI/CampaignBudgetsDev/: index.html
examples/UI/CampaignBugetsDist/: index.html
examples/bidder/: BID_REQUEST_BANNER.json  CMakeLists.txt  ab_bidder.sh  ab_multi_bidder.sh  ad.hpp  ad_geo.hpp  ad_selector.hpp  bidder.hpp  bidder_caches.hpp  bidder_selector.hpp  campaign_data.hpp  config.hpp  curl_banner.sh  curl_multi_banner.sh  decision_exchange.hpp  geo.hpp  geo_ad.hpp  geo_campaign.hpp  http_bidder_test.cpp  multi_bidder.cpp  multi_exchange_handler.cpp  multi_exchange_handler_tl.cpp  reponse_builder.hpp  response_builder.hpp  selector.hpp  serialization.hpp
examples/bidder/data/: ad_geo  ads  ads_source  campaign_budget  geo  geo_campaign  ico_ads  ico_campaign  ico_domains
examples/bidder/etc/: config.cfg
examples/bidder/generator/: ad.py  campaign.py  campaign_budget.py  ico.py
examples/bidder/mock_exchange/: data.json.template  main.py  mock-x.py
examples/bidder_experimental/: CMakeLists.txt  config.hpp  ico_campaign.hpp  ico_campaign_bidder_test.cpp
examples/campaign/: CMakeLists.txt  campaign_budget_mapper.hpp  campaign_cache.hpp  campaign_manager_test.cpp  campaigns.json  config.hpp  curl_campaign.sh  curl_win.sh  notification_service_test.cpp  serialization.hpp  slavebanker_service_test.cpp
examples/datacache/: ad_entity.hpp  campaign_entity.hpp  city_country_entity.hpp  geo_entity.hpp
examples/etc/: config.cfg
examples/ico_campaign_bidder/: ICO_BID_REQUEST_BANNER.json  ad_selector.hpp  algos.hpp  bidder.hpp  config.hpp  ico_campaign.hpp  ico_campaign_bidder_test.cpp  referer.hpp
examples/ico_campaign_loader/: config.hpp  ico_campaign_loader_test.cpp
examples/loader/: CMakeLists.txt  cache_loader_test.cpp  config.hpp  curl_loader.sh  ico_campaign_loader_test.cpp  ico_curl_loader.sh
examples/loader_experimental/: CMakeLists.txt  config.hpp  ico_campaign_loader_test.cpp  ico_curl_loader.sh
examples/matchers/: ad.hpp  domain.hpp  geo.hpp  geo_ad.hpp  geo_campaign.hpp  ico_campaign.hpp  referer.hpp
examples/multiexchange/: CMakeLists.txt  multi_exchange_handler.cpp  multiexchange_config.hpp  multiexchange_status.hpp  user_info.hpp
jsmn/: CMakeLists.txt
jsonv/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  libjsonv.pc  libjsonv.pc.in  libjsonv.so.1.1.2
jsonv/config/: Doxyfile  travisci_ecdsa.enc  travisci_ecdsa.pub
jsonv/debian/: changelog
jsonv/doc/: conversions.dot
jsonv/include/jsonv/: algorithm.hpp  all.hpp  coerce.hpp  config.hpp  encode.hpp  extract.hpp  functional.hpp  optional.hpp  parse.hpp  serialization.hpp  serialization_optional.hpp  serialization_util.hpp  string_view.hpp  util.hpp  value.hpp
jsonv/installer/rpm/: jsonv.spec.in
jsonv/msvc/vs2015/: JsonVoorhees.sln
jsonv/src/json-benchmark/: core.cpp  jansson_benchmark.cpp  jsonv_benchmark.cpp  main.cpp
jsonv/src/jsonv-tests/: algorithm_compare_tests.cpp  array_tests.cpp  benchmark_tests.cpp  chrono_io.cpp  demangle_tests.cpp  encode_tests.cpp  filesystem_util.hpp  kind_tests.cpp  main.cpp  object_tests.cpp  parse_tests.cpp  path_tests.cpp  stopwatch.cpp  (+7 more)
parsers/: CMakeLists.txt
rtb/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  vanilla-rtb.sln  vanilla_rtb.vcxproj  vanilla_rtb.vcxproj.filters
rtb/DSL/: README.md  any_mapper.hpp  campaign_dsl.hpp  dsl_mapper.hpp  encoders.hpp  extractors.hpp  generic_dsl.hpp  generic_dsl_view.hpp  jsmn_encoder.hpp  jsonv_store.hpp  rapid_mapper.hpp  rapid_serializer.hpp
rtb/client/: asio_key_value_client.cpp  asio_key_value_client.hpp  empty_asio_client_adapter.cpp  empty_asio_client_adapter.hpp  empty_key_value_client.cpp  empty_key_value_client.hpp
rtb/common/: concepts.hpp  decision_router.hpp  decision_tree.hpp  perf_timer.hpp  split_string.hpp  string_utils.hpp  type_algo.hpp  uri_grammar.hpp  uri_parts.hpp
rtb/config/: config.hpp
rtb/core/: ad_selector.hpp  algos.hpp  banker.hpp  bid_request.hpp  bidder.hpp  compiler.hpp  core.hpp  logger.cpp  openrtb.hpp  openrtb_view.hpp  process.hpp  tagged_tuple.hpp  unicode_string.hpp  user_info.hpp
rtb/datacache/: account_entity.hpp  ad_entity.hpp  ad_geo_entity.hpp  any_str_ops.hpp  base_entity.hpp  campaign_entity.hpp  city_country_entity.hpp  entity_cache.hpp  generic_bidder_cache_loader.hpp  geo_ad_entity.hpp  geo_entity.hpp  memory_types.hpp  multi_cache_loader.hpp
rtb/examples/: CMakeLists.txt  exchange_handler_test.cpp
rtb/exchange/: README.md  exchange_handler.hpp  exchange_handler2.hpp  exchange_server.hpp  multibidder_collector.hpp  multibidder_communicator.hpp  request_throttler.hpp
rtb/messaging/: communicator.hpp  serialization.hpp  shared_io_service.hpp
service/: CMakeLists.txt  connection.hpp  mime_types.cpp  mime_types.hpp  persistent_connection.hpp  reply.cpp  request.hpp  request_handler.hpp  server.hpp
tests/: CMakeLists.txt  README.md  main.cpp  vanilla_all.cpp  vanilla_string_utils_test.cpp
(+165 files in other folders)
